--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
     <head>
-        <title>Criado o cabecalho da Pagina </title>
+        <title>Cabecalho do index</title>
     </head>
+
 </html>
