--- a/index.html
+++ b/index.html
@@ -2,4 +2,8 @@
     <head>
         <title>Cabecalho do index</title>
     </head>
+    <Body>
+        <h1>Corpo Index</h1>
+    </Body>
+    
 </html>
