--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
         <h1>Corpo Index</h1>
     </Body>
 
-    <Footer> <h1>adicionado rodape</h1></Footer>
+    <Footer> <h1>adicionado rodapes</h1></Footer>
     
 </html>
